Renamed from readme-utils to projectz

--- a/package.json
+++ b/package.json
@@ -1,41 +1,37 @@
 {
-	"name": "readme-utils",
-	"version": "1.0.0",
-	"description": "Utilities for batch updating your README files",
-	"homepage": "https://github.com/bevry/readme-utils",
+	"name": "projectz",
+	"version": "0.0.1",
+	"description": "Stop wasting time syncing and updating your project's README and Package Files!",
+	"homepage": "https://github.com/bevry/projectz",
 	"keywords": [
-		"readme", "batch", "tools", "package.json"
+		"project", "readme", "package.json", "jquery.json", "component.json", "bower.json"
 	],
 	"author": "Bevry Pty Ltd <us@bevry.me> (http://bevry.me)",
 	"maintainers": [
 		"Benjamin Lupton <b@lupton.cc> (https://github.com/balupton)"
 	],
 	"contributors": [
-		"Benjamin Lupton <b@lupton.cc> (https://github.com/balupton)"	],
+		"Benjamin Lupton <b@lupton.cc> (https://github.com/balupton)"
+	],
 	"bugs": {
-		"url": "https://github.com/bevry/readme-utils/issues"
+		"url": "https://github.com/bevry/projectz/issues"
 	},
 	"repository" : {
 		"type": "git",
-		"url": "https://github.com/bevry/readme-utils.git"
+		"url": "https://github.com/bevry/projectz.git"
 	},
-	"licenses": [
-		{
-			"type": "MIT",
-			"url": "https://github.com/bevry/readme-utils/blob/master/LICENSE.md"
-		}
-	],
+	"license": "MIT",
 	"engines" : {
 		"node": ">=0.4"
 	},
 	"dependencies": {
-		"extendr": "~2.0.1"
+		"extendr": "~2.1.0"
 	},
 	"devDependencies": {
 		"coffee-script": "~1.6.2"
 	},
-	"main": "./out/readme-utils.js",
+	"main": "./out/projectz.js",
 	"scripts": {
-		"test": "node ./out/readme-utils-test.js"
+		"test": "node ./out/projectz-test.js"
 	}
 }
