Got contributors going. Added made packages, readmes, and badges nested fields

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "component.json",
     "bower.json"
   ],
-  "author": "Bevry Pty Ltd <us@bevry.me> (http://bevry.me)",
+  "author": "2013+ Bevry Pty Ltd <us@bevry.me> (http://bevry.me)",
   "maintainers": [
     "Benjamin Lupton <b@lupton.cc> (https://github.com/balupton)"
   ],
