Renamed fury badge to npm badge. Updated the readme to reflect latest developments

--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   },
   "badges": {
     "travis": true,
-    "fury": true,
+    "npm": true,
     "gittip": "bevry",
     "flattr": "344188/balupton-on-Flattr",
     "paypal": "QB8GQPZAH84N6"
