License file now being updated

--- a/package.json
+++ b/package.json
@@ -57,5 +57,8 @@
     "gittip": "bevry",
     "flattr": "344188/balupton-on-Flattr",
     "paypal": "QB8GQPZAH84N6"
-  }
+  },
+  "licenses": [
+    "MIT"
+  ]
 }
