--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   },
   "main": "./out/lib/projectz.js",
   "scripts": {
-    "test": "echo 'no tests yet'",
+    "test": "cd test/src && ../../bin/projectz compile",
     "start": "node ./node_modules/coffee-script/bin/cake watch"
   },
   "bin": {
@@ -62,6 +62,7 @@
     "npm": true,
     "gittip": "bevry",
     "flattr": "344188/balupton-on-Flattr",
-    "paypal": "QB8GQPZAH84N6"
+    "paypal": "QB8GQPZAH84N6",
+    "daviddm": true
   }
 }
