Fixed @robloach url

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "2013+ Bevry Pty Ltd <us@bevry.me> (http://bevry.me)",
   "maintainers": [
     "Benjamin Lupton <b@lupton.cc> (https://github.com/balupton)",
-    "Rob Loach <robloach@gmail.com> (http://robloach.net)"
+    "Rob Loach <robloach@gmail.com> (https://github.com/RobLoach)"
   ],
   "contributors": [
     "Benjamin Lupton <b@lupton.cc> (https://github.com/balupton)"
