--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "Rob Loach <robloach@gmail.com> (https://github.com/RobLoach)"
   ],
   "contributors": [
-    "Benjamin Lupton <b@lupton.cc> (https://github.com/balupton)"
+    "Benjamin Lupton <b@lupton.cc> (https://github.com/balupton)",
+    "Rob Loach <robloach@gmail.com> (https://github.com/RobLoach)"
   ],
   "bugs": {
     "url": "https://github.com/bevry/projectz/issues"
