--- a/package.json
+++ b/package.json
@@ -49,11 +49,15 @@
   },
   "devDependencies": {
     "docco": "~0.6.2",
-    "coffee-script": "~1.6.2"
+    "coffee-script": "~1.6.2",
+    "chai": "~1.8.1",
+    "joe": "~1.3.2",
+    "joe-reporter-console": "~1.2.1",
+    "safeps": "~2.2.10"
   },
   "main": "./out/lib/projectz.js",
   "scripts": {
-    "test": "bin/projectz compile -p test/src",
+    "test": "node ./out/test/compile-test.js",
     "start": "node ./node_modules/coffee-script/bin/cake watch"
   },
   "bin": {
