--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "title": "Projectz",
   "name": "projectz",
-  "version": "0.3.7",
+  "version": "0.3.10",
   "description": "Stop wasting time syncing and updating your project's README and Package Files!",
   "homepage": "https://github.com/bevry/projectz",
   "keywords": [
@@ -20,7 +20,8 @@
     "gittip": "bevry",
     "flattr": "344188/balupton-on-Flattr",
     "paypal": "QB8GQPZAH84N6",
-    "bitcoin": "https://coinbase.com/checkouts/9ef59f5479eec1d97d63382c9ebcb93a"
+    "bitcoin": "https://coinbase.com/checkouts/9ef59f5479eec1d97d63382c9ebcb93a",
+    "wishlist": "http://amzn.com/w/2F8TXKSNAFG4V"
   },
   "author": "2013+ Bevry Pty Ltd <us@bevry.me> (http://bevry.me)",
   "maintainers": [
@@ -59,8 +60,8 @@
   },
   "devDependencies": {
     "docco": "~0.6.2",
-    "coffee-script": "~1.6.2",
-    "chai": "~1.8.1",
+    "coffee-script": "~1.7.1",
+    "chai": "~1.9.0",
     "joe": "~1.3.2",
     "joe-reporter-console": "~1.2.1",
     "safeps": "~2.2.10"
