--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "title": "Projectz",
   "name": "projectz",
-  "version": "0.3.11",
+  "version": "0.3.12",
   "description": "Stop wasting time syncing and updating your project's README and Package Files!",
   "homepage": "https://github.com/bevry/projectz",
   "keywords": [
@@ -47,22 +47,22 @@
   },
   "dependencies": {
     "extendr": "~2.1.0",
-    "cson": "~1.4.5",
-    "taskgroup": "~3.3.1",
+    "cson": "~1.6.0",
+    "taskgroup": "~3.4.0",
     "getcontributors": "~1.3.4",
     "eachr": "~2.0.2",
     "caterpillar": "~2.0.4",
     "caterpillar-filter": "~2.0.1",
     "caterpillar-human": "~2.1.0",
     "safefs": "~3.1.0",
-    "commander": "~2.1.0",
+    "commander": "~2.2.0",
     "typechecker": "~2.0.8"
   },
   "devDependencies": {
     "docco": "~0.6.2",
     "coffee-script": "~1.7.1",
-    "chai": "~1.9.0",
-    "joe": "~1.3.2",
+    "chai": "~1.9.1",
+    "joe": "~1.4.0",
     "joe-reporter-console": "~1.2.1",
     "safeps": "~2.2.10"
   },
@@ -73,5 +73,8 @@
   },
   "bin": {
     "projectz": "./bin/projectz"
+  },
+  "cakeConfiguration": {
+    "COFFEE_SRC_PATH": "src"
   }
 }
