Update Base - fixes #31

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   ],
   "contributors": [
     "Benjamin Lupton <b@lupton.cc> (https://github.com/balupton)",
-    "Rob Loach <robloach@gmail.com> (https://github.com/RobLoach)"
+    "Rob Loach <robloach@gmail.com> (https://github.com/RobLoach)",
+    "Zearin (https://github.com/Zearin)"
   ],
   "bugs": {
     "url": "https://github.com/bevry/projectz/issues"
