--- a/package.json
+++ b/package.json
@@ -47,16 +47,16 @@
     "node": ">=0.4"
   },
   "dependencies": {
-    "extendr": "~2.1.0",
-    "cson": "~1.6.0",
-    "taskgroup": "~4.0.0",
-    "getcontributors": "~1.3.4",
-    "eachr": "~2.0.2",
     "caterpillar": "~2.0.4",
     "caterpillar-filter": "~2.0.1",
     "caterpillar-human": "~2.1.0",
+    "commander": "^2.2.0",
+    "cson": "~1.6.0",
+    "eachr": "~2.0.2",
+    "extendr": "~2.1.0",
+    "getcontributors": "~1.3.4",
     "safefs": "~3.1.0",
-    "commander": "~2.2.0",
+    "taskgroup": "~4.0.0",
     "typechecker": "~2.0.8"
   },
   "devDependencies": {
