fixes cmd line -d option
adds myself to the contributions list

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   ],
   "contributors": [
     "Benjamin Lupton <b@lupton.cc> (https://github.com/balupton)",
+    "pflannery (https://github.com/pflannery)",
     "Rob Loach <robloach@gmail.com> (https://github.com/RobLoach)",
     "Zearin (https://github.com/Zearin)"
   ],
