--- a/.npmignore
+++ b/.npmignore
@@ -1,4 +1,4 @@
-# v1.3.18 June 8, 2014
+# v1.3.23 October 11, 2014
 # https://github.com/bevry/base
 
 # Temp Files
@@ -16,6 +16,7 @@ node_modules/
 
 # Development Files
 .editorconfig
+.eslintrc
 .jshintrc
 coffeelint.json
 .travis*
