--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "version": "0.5.0",
   "description": "Stop wasting time syncing and updating your project's README and Package Files!",
   "homepage": "https://github.com/bevry/projectz",
+  "license": {
+    "type": "MIT"
+  },
   "keywords": [
     "project",
     "readme",
+    "license",
+    "meta",
     "package.json",
     "jquery.json",
     "component.json",
@@ -18,11 +23,11 @@
     "npmdownloads": true,
     "david": true,
     "daviddev": true,
-    "gittip": "bevry",
+    "gratipay": "bevry",
     "flattr": "344188/balupton-on-Flattr",
     "paypal": "QB8GQPZAH84N6",
-    "bitcoin": "https://coinbase.com/checkouts/9ef59f5479eec1d97d63382c9ebcb93a",
-    "wishlist": "http://amzn.com/w/2F8TXKSNAFG4V"
+    "bitcoin": "https://bevry.me/bitcoin",
+    "wishlist": "https://bevry.me/wishlist"
   },
   "author": "2013+ Bevry Pty Ltd <us@bevry.me> (http://bevry.me)",
   "maintainers": [
@@ -42,42 +47,49 @@
     "type": "git",
     "url": "https://github.com/bevry/projectz.git"
   },
-  "license": {
-    "type": "MIT"
-  },
   "engines": {
-    "node": ">=0.4"
+    "node": ">=0.12"
   },
   "dependencies": {
-    "extendr": "^2.1.0",
-    "cson": "^2.0.0",
-    "taskgroup": "^4.2.0",
-    "getcontributors": "^1.3.4",
-    "eachr": "^2.0.2",
     "caterpillar": "^2.0.7",
     "caterpillar-filter": "^2.0.3",
     "caterpillar-human": "^2.1.2",
-    "safefs": "^3.1.1",
     "commander": "^2.6.0",
+    "cson": "^3.0.1",
+    "eachr": "^2.0.2",
+    "extendr": "^2.1.0",
+    "getcontributors": "^1.3.4",
+    "safefs": "^4.0.0",
+    "taskgroup": "^4.2.0",
     "typechecker": "^2.0.8"
   },
   "devDependencies": {
-    "docco": "^0.7.0",
-    "coffee-script": "^1.9.1",
-    "chai": "^2.1.0",
+    "assert-helpers": "^1.0.2",
+    "babel": "^5.8.23",
+    "babel-eslint": "^4.1.1",
+    "eslint": "^1.3.1",
     "joe": "^1.6.0",
     "joe-reporter-console": "^1.2.1",
-    "safeps": "^2.2.12"
+    "safeps": "^6.0.0"
   },
-  "main": "./out/lib/projectz.js",
-  "scripts": {
-    "test": "node ./out/test/compile-test.js",
-    "start": "node ./node_modules/coffee-script/bin/cake watch"
-  },
+  "main": "./es6guardian.js",
   "bin": {
     "projectz": "./bin/projectz"
   },
-  "cakeConfiguration": {
-    "COFFEE_SRC_PATH": "src"
+  "scripts": {
+    "clean": "node --harmony nakefile.js clean",
+    "setup": "node --harmony nakefile.js setup",
+    "compile": "node --harmony nakefile.js compile",
+    "watch": "node --harmony nakefile.js watch",
+    "verify": "node --harmony nakefile.js verify",
+    "meta": "node --harmony nakefile.js meta",
+    "prepare": "node --harmony nakefile.js prepare",
+    "release": "node --harmony nakefile.js release",
+    "test": "node --harmony ./es5/test/projectz-test.js"
+  },
+  "nakeConfiguration": {
+    "BABEL_SRC_PATH": "es6",
+    "ESLINT_SRC_PATH": "es6",
+    "YUIDOC_SRC_PATH": "es6"
   }
 }
