--- a/package.json
+++ b/package.json
@@ -57,14 +57,16 @@
     "commander": "^2.6.0",
     "cson": "^3.0.1",
     "eachr": "^2.0.2",
-    "extendr": "^2.1.0",
+    "extendr": "^3.0.0",
     "getcontributors": "^1.3.4",
     "safefs": "^4.0.0",
+    "spdx": "^0.4.1",
+    "spdx-license-list": "^2.0.0",
     "taskgroup": "^4.2.0",
-    "typechecker": "^2.0.8"
+    "typechecker": "^3.0.0"
   },
   "devDependencies": {
-    "assert-helpers": "^1.0.2",
+    "assert-helpers": "^3.0.0",
     "babel": "^5.8.23",
     "babel-eslint": "^4.1.1",
     "eslint": "^1.3.1",
@@ -72,7 +74,7 @@
     "joe-reporter-console": "^1.2.1",
     "safeps": "^6.0.0"
   },
-  "main": "./es6guardian.js",
+  "main": "./esnextguardian.js",
   "bin": {
     "projectz": "./bin/projectz"
   },
@@ -88,8 +90,8 @@
     "test": "node --harmony ./es5/test/projectz-test.js"
   },
   "nakeConfiguration": {
-    "BABEL_SRC_PATH": "es6",
-    "ESLINT_SRC_PATH": "es6",
-    "YUIDOC_SRC_PATH": "es6"
+    "BABEL_SRC_PATH": "esnext",
+    "ESLINT_SRC_PATH": "esnext",
+    "YUIDOC_SRC_PATH": "esnext"
   }
 }
