got working, need to clean up

--- a/package.json
+++ b/package.json
@@ -54,11 +54,15 @@
     "caterpillar": "^2.0.7",
     "caterpillar-filter": "^2.0.3",
     "caterpillar-human": "^2.1.2",
+    "chainy-core": "^1.5.0",
+    "chainy-plugin-each": "^1.0.0",
+    "chainy-plugin-feed": "^1.0.0",
+    "chainy-plugin-map": "^1.0.3",
+    "chainy-plugin-set": "^1.0.2",
     "commander": "^2.6.0",
     "cson": "^3.0.1",
     "eachr": "^2.0.2",
     "extendr": "^3.0.0",
-    "getcontributors": "^1.3.4",
     "safefs": "^4.0.0",
     "spdx": "^0.4.1",
     "spdx-license-list": "^2.0.0",
