--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "title": "Projectz",
   "name": "projectz",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Stop wasting time syncing and updating your project's README and Package Files!",
   "homepage": "https://github.com/bevry/projectz",
   "license": "MIT",
@@ -78,7 +78,7 @@
     "cson": "^3.0.1",
     "eachr": "^2.0.2",
     "extendr": "^3.0.0",
-    "fellow": "^1.2.0",
+    "fellow": "^2.0.0",
     "safefs": "^4.0.0",
     "spdx": "^0.4.1",
     "spdx-license-list": "^2.0.0",
@@ -86,7 +86,7 @@
     "typechecker": "^3.0.0"
   },
   "devDependencies": {
-    "assert-helpers": "^3.0.0",
+    "assert-helpers": "^4.0.0",
     "babel": "^5.8.23",
     "babel-eslint": "^4.1.1",
     "eslint": "^1.3.1",
@@ -94,6 +94,7 @@
     "joe-reporter-console": "^1.2.1",
     "safeps": "^6.0.0"
   },
+  "preferGlobal": true,
   "main": "./esnextguardian.js",
   "bin": {
     "projectz": "./bin/projectz"
