--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "title": "Projectz",
   "name": "projectz",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Stop wasting time syncing and updating your project's README and Package Files!",
   "homepage": "https://github.com/bevry/projectz",
   "license": "MIT",
@@ -10,6 +10,9 @@
     "readme",
     "license",
     "meta",
+    "generator",
+    "markdown",
+    "documentation",
     "package.json",
     "jquery.json",
     "component",
@@ -81,7 +84,7 @@
     "chainy-plugin-set": "^1.0.2",
     "commander": "^2.8.1",
     "cson": "^3.0.2",
-    "eachr": "^2.0.4",
+    "eachr": "^3.0.0",
     "esnextguardian": "^1.1.0",
     "extendr": "^3.0.0",
     "fellow": "^2.0.0",
@@ -89,12 +92,13 @@
     "spdx": "^0.4.1",
     "spdx-license-list": "^2.0.0",
     "taskgroup": "^4.3.0",
-    "typechecker": "^3.0.0"
+    "typechecker": "^4.0.0"
   },
   "devDependencies": {
     "assert-helpers": "^4.0.0",
-    "babel": "^5.8.23",
-    "babel-eslint": "^4.1.3",
+    "babel-cli": "^6.2.0",
+    "babel-eslint": "^4.1.6",
+    "babel-preset-es2015": "^6.1.18",
     "eslint": "^1.5.0",
     "joe": "^1.6.0",
     "joe-reporter-console": "^1.2.1",
