--- a/package.json
+++ b/package.json
@@ -96,10 +96,15 @@
     "typechecker": "^4.0.0"
   },
   "devDependencies": {
-    "assert-helpers": "^4.0.0",
-    "babel-cli": "^6.2.0",
-    "babel-preset-es2015": "^6.1.18",
-    "eslint": "^1.5.0",
+    "assert-helpers": "^4.1.0",
+    "babel-cli": "^6.6.5",
+    "babel-preset-es2015": "^6.6.0",
+    "documentation": "^4.0.0-beta",
+    "editions": "^1.0.0",
+    "eslint": "^2.3.0",
+    "eslint-plugin-babel": "^3.1.0",
+    "eslint-plugin-react": "^4.2.1",
+    "flow-bin": "^0.22.1",
     "joe": "^1.6.0",
     "joe-reporter-console": "^1.2.1",
     "safeps": "^6.0.0"
