remove doc generator, as this is a CLI app, not module

--- a/package.json
+++ b/package.json
@@ -114,8 +114,7 @@
     "clean": "rm -Rf ./docs ./es2015",
     "compile": "npm run compile:es2015",
     "compile:es2015": "babel ./source --out-dir ./es2015 --presets es2015",
-    "meta": "npm run meta:docs && npm run meta:projectz",
-    "meta:docs": "documentation build -f html -g source/**.js -o docs",
+    "meta": "npm run meta:projectz",
     "meta:projectz": "node --harmony ./bin.js compile",
     "prepare": "npm run compile && npm run test && npm run meta",
     "release": "npm run prepare && npm run release:tag && npm run release:push",
