--- a/package.json
+++ b/package.json
@@ -117,7 +117,8 @@
     "meta": "npm run meta:projectz",
     "meta:projectz": "node --harmony ./bin.js compile",
     "prepare": "npm run compile && npm run test && npm run meta",
-    "release": "npm run prepare && npm run release:tag && npm run release:push",
+    "release": "npm run prepare && npm run release:publish && npm run release:tag && npm run release:push",
+    "release:publish": "npm publish",
     "release:tag": "git tag v$npm_package_version -a",
     "release:push": "git push origin master && git push origin --tags",
     "pretest": "npm run test:eslint && npm run test:flow",
