--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "title": "Projectz",
   "name": "projectz",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "description": "Stop wasting time syncing and updating your project's README and Package Files!",
   "homepage": "https://github.com/bevry/projectz",
   "license": "MIT",
@@ -77,13 +77,13 @@
   },
   "editions": [
     {
-      "description": "Source + ESNext + Import + Flow Type Comments",
+      "description": "Source + ESNext + Require + Flow Type Comments",
       "directory": "source",
       "entry": "source/index.js",
       "syntaxes": [
         "javascript",
         "esnext",
-        "import",
+        "require",
         "classes",
         "arrows",
         "destructuring",
@@ -101,8 +101,8 @@
       "syntaxes": [
         "javascript",
         "es2015",
-        "symbols",
-        "require"
+        "require",
+        "symbols"
       ]
     }
   ],
@@ -127,36 +127,36 @@
     "test": "node --harmony -e \"require('editions').requirePackage(process.cwd(), require, 'test.js')\""
   },
   "dependencies": {
-    "badges": "^1.1.2",
+    "badges": "^1.2.0",
     "caterpillar": "^3.0.0",
     "caterpillar-filter": "^3.0.0",
     "caterpillar-human": "^3.0.0",
-    "chainy-core": "^1.5.0",
-    "chainy-plugin-each": "^1.0.0",
+    "chainy-core": "^1.6.0",
+    "chainy-plugin-each": "^1.1.0",
     "chainy-plugin-feed": "^1.0.0",
     "chainy-plugin-map": "^1.0.3",
     "chainy-plugin-set": "^1.0.2",
     "commander": "^2.9.0",
     "cson": "^3.0.2",
-    "eachr": "^3.1.1",
+    "eachr": "^3.2.0",
     "editions": "^1.1.1",
-    "extendr": "^3.1.0",
+    "extendr": "^3.2.0",
     "fellow": "^2.2.0",
-    "safefs": "^4.0.1",
+    "safefs": "^4.1.0",
     "spdx": "^0.5.1",
     "spdx-license-list": "^2.1.0",
-    "taskgroup": "^4.3.1",
+    "taskgroup": "4 || 5",
     "typechecker": "^4.3.0"
   },
   "devDependencies": {
-    "assert-helpers": "^4.2.0",
-    "babel-cli": "^6.8.0",
-    "babel-preset-es2015": "^6.6.0",
-    "eslint": "^2.9.0",
+    "assert-helpers": "^4.4.0",
+    "babel-cli": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
+    "eslint": "^2.11.1",
     "eslint-plugin-babel": "^3.2.0",
-    "flow-bin": "^0.24.1",
-    "joe": "^1.6.0",
+    "flow-bin": "^0.26.0",
+    "joe": "^1.8.0",
     "joe-reporter-console": "^1.2.1",
-    "safeps": "^6.0.2"
+    "safeps": "^6.3.0"
   }
 }
