Recompile meta files

--- a/package.json
+++ b/package.json
@@ -54,11 +54,11 @@
   },
   "author": "2013+ Bevry Pty Ltd <us@bevry.me> (http://bevry.me)",
   "maintainers": [
-    "Benjamin Lupton <b@lupton.cc> (https://balupton.com)",
+    "Benjamin Lupton <b@lupton.cc> (http://balupton.com)",
     "Rob Loach <robloach@gmail.com> (http://robloach.net)"
   ],
   "contributors": [
-    "Benjamin Lupton <b@lupton.cc> (https://balupton.com)",
+    "Benjamin Lupton <b@lupton.cc> (http://balupton.com)",
     "Peter Flannery (https://github.com/pflannery)",
     "Rob Loach <robloach@gmail.com> (http://robloach.net)",
     "Zearin (https://github.com/Zearin)",
