--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "title": "Projectz",
   "name": "projectz",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Stop wasting time syncing and updating your project's README and Package Files!",
   "homepage": "https://github.com/bevry/projectz",
   "license": "MIT",
@@ -63,7 +63,8 @@
     "Rob Loach <robloach@gmail.com> (http://robloach.net)",
     "Zearin (https://github.com/Zearin)",
     "vsopvsop (https://github.com/vsopvsop)",
-    "Shahar Or <mightyiampresence@gmail.com> (http://mightyi.am)"
+    "Shahar Or <mightyiampresence@gmail.com> (http://mightyi.am)",
+    "Zlatan Vasović <zlatanvasovic@gmail.com> (http://zdroid.github.io)"
   ],
   "bugs": {
     "url": "https://github.com/bevry/projectz/issues"
@@ -76,7 +77,7 @@
     {
       "description": "Source + ESNext + Require + Flow Type Comments",
       "directory": "source",
-      "entry": "source/index.js",
+      "entry": "index.js",
       "syntaxes": [
         "javascript",
         "esnext",
@@ -94,7 +95,7 @@
     {
       "description": "Babel Compiled + ES2015 + Require",
       "directory": "es2015",
-      "entry": "es2015/index.js",
+      "entry": "index.js",
       "syntaxes": [
         "javascript",
         "es2015",
@@ -131,27 +132,26 @@
     "chainy-core": "^1.6.0",
     "chainy-plugin-each": "^1.1.0",
     "chainy-plugin-feed": "^1.0.0",
-    "chainy-plugin-map": "^1.0.3",
+    "chainy-plugin-map": "^1.0.5",
     "chainy-plugin-set": "^1.0.2",
     "commander": "^2.9.0",
     "cson": "^3.0.2",
     "eachr": "^3.2.0",
-    "editions": "^1.1.1",
-    "extendr": "^3.2.0",
-    "fellow": "^2.2.0",
+    "editions": "^1.3.1",
+    "extendr": "^3.2.2",
+    "fellow": "^2.3.0",
     "safefs": "^4.1.0",
     "spdx": "^0.5.1",
     "spdx-license-list": "^2.1.0",
-    "taskgroup": "4 || 5",
+    "taskgroup": "5",
     "typechecker": "^4.3.0"
   },
   "devDependencies": {
     "assert-helpers": "^4.4.0",
-    "babel-cli": "^6.10.1",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-cli": "^6.16.0",
+    "babel-preset-es2015": "^6.16.0",
     "eslint": "^2.13.0",
-    "eslint-plugin-babel": "^3.2.0",
-    "flow-bin": "^0.32.0",
+    "flow-bin": "^0.33.0",
     "joe": "^1.8.0",
     "joe-reporter-console": "^1.2.1",
     "safeps": "^6.3.0"
