updated deps, base files and linting

--- a/package.json
+++ b/package.json
@@ -108,25 +108,26 @@
   "bin": "bin.js",
   "main": "index.js",
   "scripts": {
-    "setup": "npm install",
-    "clean": "rm -Rf ./docs ./es2015",
-    "compile": "npm run compile:es2015",
-    "compile:es2015": "babel ./source --out-dir ./es2015 --presets es2015",
-    "meta": "npm run meta:projectz",
-    "meta:projectz": "node --harmony ./bin.js compile",
-    "prepare": "npm run compile && npm run test && npm run meta",
-    "release": "npm run prepare && npm run release:publish && npm run release:tag && npm run release:push",
-    "release:publish": "npm publish",
-    "release:tag": "git tag v$npm_package_version -a",
-    "release:push": "git push origin master && git push origin --tags",
-    "pretest": "npm run test:eslint && npm run test:flow",
-    "test:eslint": "eslint ./source",
-    "test:flow": "flow check",
-    "test": "node --harmony -e \"require('editions').requirePackage(process.cwd(), require, 'test.js')\""
+    "our:clean": "rm -Rf ./docs ./es2015",
+    "our:compile": "npm run our:compile:es2015",
+    "our:compile:es2015": "babel ./source --out-dir ./es2015 --presets es2015",
+    "our:meta": "npm run our:meta:projectz",
+    "our:meta:projectz": "npm run custom:meta:projectz",
+    "custom:meta:projectz": "node --harmony ./bin.js compile",
+    "our:verify": "npm run our:verify:eslint && npm run our:verify:flow",
+    "our:verify:eslint": "eslint --fix ./source",
+    "our:verify:flow": "flow check",
+    "our:test": "npm run our:verify && npm test",
+    "our:release": "npm run our:release:prepare && npm run our:release:publish && npm run our:release:tag && npm run our:release:push",
+    "our:release:prepare": "npm run our:clean && npm run our:compile && npm run our:test && npm run our:meta",
+    "our:release:publish": "npm publish",
+    "our:release:tag": "git tag v$npm_package_version -a",
+    "our:release:push": "git push origin master && git push origin --tags",
+    "test": "node --harmony ./test.js"
   },
   "dependencies": {
     "badges": "^1.2.1",
-    "caterpillar": "^3.0.0",
+    "caterpillar": "^3.0.1",
     "caterpillar-filter": "^3.0.0",
     "caterpillar-human": "^3.0.0",
     "chainy-core": "^1.6.0",
@@ -135,7 +136,7 @@
     "chainy-plugin-map": "^1.0.5",
     "chainy-plugin-set": "^1.0.2",
     "commander": "^2.9.0",
-    "cson": "^3.0.2",
+    "cson": "^4.0.0",
     "eachr": "^3.2.0",
     "editions": "^1.3.1",
     "extendr": "^3.2.2",
@@ -150,7 +151,7 @@
     "assert-helpers": "^4.4.0",
     "babel-cli": "^6.16.0",
     "babel-preset-es2015": "^6.16.0",
-    "eslint": "^2.13.0",
+    "eslint": "^3.8.1",
     "flow-bin": "^0.33.0",
     "joe": "^1.8.0",
     "joe-reporter-console": "^1.2.1",
