--- a/.flowconfig
+++ b/.flowconfig
@@ -1,12 +1,14 @@
-# 2016 September 15
+# 2016 October 23
 # https://github.com/bevry/base
 [ignore]
 .*/docs/.*
-<PROJECT_ROOT>/node_modules/caterpillar/source/.*
+<PROJECT_ROOT>/es2015/.*
 
 [options]
 module.ignore_non_literal_requires=true
 unsafe.enable_getters_and_setters=true
+esproposal.class_static_fields=enable
+esproposal.class_instance_fields=enable
 
 [version]
 >=0.23 <1
